--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -36,7 +36,7 @@ body {
 /*color of projects page heading*/
 
 .my_projects {
-  color: #4e00bb;
+  color: #bb86fc;
 }
 
 /*For Changing background color of body according to theme*/
@@ -855,4 +855,8 @@ SVG ANIMATIONS PROJECT PAGE
   animation-iteration-count: infinite;
   animation-duration: 3.3s;
   transform-origin: 785.132px 295.833px;
+}
+
+.description{ 
+  font-size: 15px;
 }
